force-app/main/default/objects/Account/fields/Product_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Category__c</fullName>
    <description>IT Product Sub Category</description>
    <inlineHelpText>Select a Sub Category</inlineHelpText>
    <label>Product Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Product_Sub_Category</valueSetName>
    </valueSet>
</CustomField>