force-app/main/default/objects/Account/fields/Sum_Of_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Amount__c</fullName>
    <description>Amount of Opportunity</description>
    <inlineHelpText>Read Only field  to see the Amount of Opps</inlineHelpText>
    <label>Sum Of Amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>