force-app/main/default/objects/Account/fields/XYXZ__c.field-meta.xml
<CustomField>
    <fullName>XYXZ__c</fullName>
    <label>XYXZ</label>
    <length>3</length>
    <type>Text</type>
</CustomField>