force-app/main/default/objects/Account/recordTypes/Long_Term.recordType-meta.xml
<RecordType>
    <fullName>Long_Term</fullName>
    <active>true</active>
    <description>Long Term Investment Accounts</description>
    <label>Long Term</label>
</RecordType>