force-app/main/default/objects/Account/recordTypes/Short_Term.recordType-meta.xml
<RecordType>
    <fullName>Short_Term</fullName>
    <active>true</active>
    <description>Short Term Investment Accounts</description>
    <label>Short Term</label>
</RecordType>