force-app/main/default/objects/Account/validationRules/Please_provide_phone_field_if_industry.validationRule-meta.xml
<ValidationRule>
    <fullName>Please_provide_phone_field_if_industry</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Industry ,&quot;Agriculture&quot; ) ,ISBLANK(Phone) )</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone value needed</errorMessage>
</ValidationRule>